<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View"/>
        <variable
            name="vm"
            type="com.amier.jelajahrasa.presentation.ui.auth.viewmodel.RegisterViewModel" />
    </data>

<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/layoutRegister"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.auth.view.RegisterActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/auth_regist_tv_title"
        android:textColor="@color/colorPrimary"
        android:textSize="42sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="210dp"
        android:layout_height="450dp"
        android:background="@drawable/ic_register_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLogRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:background="@drawable/btn_top"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:enabled="@{!vm.isLoading}"
            android:text="@string/auth_regist_btn_login"
            android:onClick="@{()-> vm.onClickEvent(0)}"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:text="@string/auth_regist_tv_register"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:cardCornerRadius="24dp"
        app:cardElevation="1dp"
        app:cardMaxElevation="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etLoginName2"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:hint="@string/auth_login_name_hint"
                android:paddingStart="6dp"
                android:paddingEnd="6dp"
                android:paddingBottom="12dp"
                app:errorText="@{vm.errorName}">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_person"
                    android:drawablePadding="6dp"
                    android:enabled="@{!vm.isLoading}"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:text="@={vm.name}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etLoginEmail2"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:hint="@string/auth_login_email_hint"
                android:paddingStart="6dp"
                android:paddingEnd="6dp"
                android:paddingBottom="12dp"
                app:errorText="@{vm.errorEmail}">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_email"
                    android:drawablePadding="6dp"
                    android:enabled="@{!vm.isLoading}"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:text="@={vm.email}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etLoginPassword2"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="24dp"
                android:hint="@string/auth_login_password_hint"
                android:paddingStart="6dp"
                android:paddingEnd="6dp"
                android:paddingBottom="12dp"
                app:errorText="@{vm.errorPassword}"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_lock"
                    android:drawablePadding="6dp"
                    android:enabled="@{!vm.isLoading}"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:text="@={vm.password}" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <RelativeLayout
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:elevation="1dp"
        app:layout_constraintBottom_toBottomOf="@+id/cardView2"
        app:layout_constraintEnd_toEndOf="@+id/cardView2"
        app:layout_constraintStart_toStartOf="@+id/cardView2"
        app:layout_constraintTop_toBottomOf="@+id/cardView2">
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:background="@drawable/login_btn_bg_selector"
        android:enabled="@{vm.isValid &amp;&amp; !vm.isLoading}"
        android:text="@string/auth_register_btn_submit"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:onClick="@{()-> vm.register()}"/>
    </RelativeLayout>
    <ProgressBar
        android:visibility="@{vm.isLoading ? View.VISIBLE : View.GONE}"
        android:id="@+id/progressBar"
        android:elevation="3dp"
        style="@android:style/Widget.Material.Light.ProgressBar.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="gone"/>
    <View
        android:visibility="@{vm.isLoading ? View.VISIBLE : View.GONE}"
        android:id="@+id/overlay"
        android:elevation="2dp"
        android:background="#99000000"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>